zeebe-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: zeebe
  name: zeebe
spec:
  ports:
    - name: "26500"
      port: 26500
      targetPort: 26500
    - name: "9600"
      port: 9600
      targetPort: 9600
  selector:
    io.kompose.service: zeebe
status:
  loadBalancer: {}
